# api/docs/openapi.yaml
@@ -73,20 +73,6 @@ paths:
                   Error:
                     type: string
                     example: Internal Server Error
-  /users/auth:
-    get:
-      summary: determine the authenticity of a logged in user
-      parameters:
-        - in: header
-          name: authorization
-          schema:
-            type: string
-          description: access token
-      responses:
-        200:
-          description: authentication successful
-        401:
-          description: unauthorized
 
   /games/join:
     post:
@@ -139,7 +125,7 @@ paths:
           description: access token
       responses:
         200:
-  /games/{game}/settings:
+  /games/{gameId}/settings:
     get:
       summary: get configurable settings for a game with default values
       responses:
@@ -160,26 +146,44 @@ paths:
                     type: boolean
                     description: Whether competitors must win by a margin of two
                     value: true
-  /games/{game}/start:
+  /games/{gameId}/open:
     post:
-      summary: start game with given settings
+      summary: open a game lobby and apply given settings to game
       requestBody:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                type: object
-              example:
-                - name: match-length
-                  value: 5
-                - name: win-by-two
-                  value: true
+              type: object
+              properties:
+                gameId:
+                  type: integer
+                  example: 1
+                settings:
+                  type: array
+                  items:
+                    type: object
+                  example:
+                    - name: match-length
+                      value: 5
+                    - name: win-by-two
+                      value: true
       responses:
         200:
-          description: successfully updated game settings
+          description: Successfully created room
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  roomId: X4D1
         400:
           description: bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Invalid gameId
         403:
           description: forbidden
         500:
